Modified the pom.xml file